--- a/simulation/motorControl/public/index.html
+++ b/simulation/motorControl/public/index.html
@@ -65,8 +65,8 @@
     }
 
     </style>
-    <!--<script src="http://192.168.1.100:8080/socket.io/socket.io.js"></script>-->
-    <script src="http://localhost:8080/socket.io/socket.io.js"></script>
+    <script src="http://192.168.1.100:8080/socket.io/socket.io.js"></script>
+    <!--<script src="http://localhost:8080/socket.io/socket.io.js"></script>-->
     <script>
     var socket = io.connect();
     socket.on('connected', function(data) {
